CParser.java
// Generated from C.g4 by ANTLR 4.5.3

	import java.io.*;
	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, INT=2, FLOAT=3, LONG=4, DOUBLE=5, CHAR=6, VOID=7, SHORT=8, BOOL=9, 
		CONST=10, SIGNED=11, UNSIGNED=12, COMM=13, PRINTF=14, INCLUDE=15, RETURN=16, 
		CONTINUE=17, BREAK=18, IF=19, ELSE=20, WHILE=21, FOR=22, LEFTPAR=23, RIGHTPAR=24, 
		LEFTSQ=25, RIGHTSQ=26, LEFTCURL=27, RIGHTCURL=28, ASSIGNMENT=29, LT=30, 
		GT=31, EQ=32, PLUSPLUS=33, MINUSMINUS=34, NEQ=35, GE=36, LE=37, PLUS=38, 
		MINUS=39, MOD=40, ASTERIK=41, DIV=42, HAT=43, NOT=44, TILDA=45, OR=46, 
		AND=47, ANDAND=48, OROR=49, COMMA=50, SEMICOL=51, DOT=52, LSHIFT=53, RSHIFT=54, 
		DIGIT=55, IDENTIFIER=56, IDENTIFIERSTRING=57, DIGITDIGIT=58, WS=59;
	public static final int
		RULE_codefile = 0, RULE_lines = 1, RULE_printfStatement = 2, RULE_ignoreComments = 3, 
		RULE_returnStatement = 4, RULE_declareVariable = 5, RULE_breakStatement = 6, 
		RULE_continueStatement = 7, RULE_include = 8, RULE_forloop = 9, RULE_whileloop = 10, 
		RULE_ifstatement = 11, RULE_arraydeclaration = 12, RULE_expression = 13, 
		RULE_assignment = 14, RULE_funcDeclare = 15, RULE_argumentlist = 16, RULE_argument = 17, 
		RULE_funcDefinition = 18, RULE_funcCall = 19, RULE_calllist = 20, RULE_call = 21, 
		RULE_digitorid = 22, RULE_alltypes = 23, RULE_everyexp = 24;
	public static final String[] ruleNames = {
		"codefile", "lines", "printfStatement", "ignoreComments", "returnStatement", 
		"declareVariable", "breakStatement", "continueStatement", "include", "forloop", 
		"whileloop", "ifstatement", "arraydeclaration", "expression", "assignment", 
		"funcDeclare", "argumentlist", "argument", "funcDefinition", "funcCall", 
		"calllist", "call", "digitorid", "alltypes", "everyexp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"'", "'int'", "'float'", "'long'", "'double'", "'char'", "'void'", 
		"'short'", "'bool'", "'const'", "'signed'", "'unsigned'", null, "'printf'", 
		"'#include '", "'return'", "'continue'", "'break'", "'if'", "'else'", 
		"'while'", "'for'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'<'", 
		"'>'", "'=='", "'++'", "'--'", "'!='", "'>='", "'<='", "'+'", "'-'", "'%'", 
		"'*'", "'/'", "'^'", "'!'", "'~'", "'|'", "'&'", "'&&'", "'||'", "','", 
		"';'", "'.'", "'<<'", "'>>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "INT", "FLOAT", "LONG", "DOUBLE", "CHAR", "VOID", "SHORT", 
		"BOOL", "CONST", "SIGNED", "UNSIGNED", "COMM", "PRINTF", "INCLUDE", "RETURN", 
		"CONTINUE", "BREAK", "IF", "ELSE", "WHILE", "FOR", "LEFTPAR", "RIGHTPAR", 
		"LEFTSQ", "RIGHTSQ", "LEFTCURL", "RIGHTCURL", "ASSIGNMENT", "LT", "GT", 
		"EQ", "PLUSPLUS", "MINUSMINUS", "NEQ", "GE", "LE", "PLUS", "MINUS", "MOD", 
		"ASTERIK", "DIV", "HAT", "NOT", "TILDA", "OR", "AND", "ANDAND", "OROR", 
		"COMMA", "SEMICOL", "DOT", "LSHIFT", "RSHIFT", "DIGIT", "IDENTIFIER", 
		"IDENTIFIERSTRING", "DIGITDIGIT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		ArrayList<String> globalList = new ArrayList<String>();
		ArrayList<String> newList = new ArrayList<String>();
		ArrayList<String> callers = new ArrayList<String>();
		FileWriter fileWriter;

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CodefileContext extends ParserRuleContext {
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public CodefileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codefile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterCodefile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitCodefile(this);
		}
	}

	public final CodefileContext codefile() throws RecognitionException {
		CodefileContext _localctx = new CodefileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_codefile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			lines();
			}
			_ctx.stop = _input.LT(-1);

				try {
					fileWriter = new FileWriter("output.DOT");
				}
				catch (IOException e){
					System.out.println("fileWriter failed");
				}
				PrintWriter printWriter = new PrintWriter(fileWriter);
				printWriter.print("digraph x{\n");
				Collections.reverse(globalList);
				for (int i=0; i<globalList.size();i++){
					if (globalList.get(i).equals("Defined main")){
						for (int j=i;j<globalList.size();j++){
							newList.add(globalList.get(j));
						}
					}
				}
				for (String s: newList){
					if (s.split(" ")[0].equals("Defined")){
						callers.add(s.split(" ")[1]);
					}
				}
				System.out.println("Starting generating callgraph");
				int counter = 1;
				int callerIndex = 0;
				String callerFunc = "";
				while (counter < newList.size()){
					while (newList.get(counter).split(" ")[0].equals("Called")){
						printWriter.write(callers.get(callerIndex)+"->"+newList.get(counter).split(" ")[1]+"\n");
						counter++;
					}
					callerIndex++;
					counter++;
				}
				printWriter.write("}");
				printWriter.close();

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinesContext extends ParserRuleContext {
		public DeclareVariableContext declareVariable() {
			return getRuleContext(DeclareVariableContext.class,0);
		}
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public IncludeContext include() {
			return getRuleContext(IncludeContext.class,0);
		}
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FuncDeclareContext funcDeclare() {
			return getRuleContext(FuncDeclareContext.class,0);
		}
		public FuncDefinitionContext funcDefinition() {
			return getRuleContext(FuncDefinitionContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public IgnoreCommentsContext ignoreComments() {
			return getRuleContext(IgnoreCommentsContext.class,0);
		}
		public WhileloopContext whileloop() {
			return getRuleContext(WhileloopContext.class,0);
		}
		public IfstatementContext ifstatement() {
			return getRuleContext(IfstatementContext.class,0);
		}
		public ArraydeclarationContext arraydeclaration() {
			return getRuleContext(ArraydeclarationContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public PrintfStatementContext printfStatement() {
			return getRuleContext(PrintfStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitLines(this);
		}
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lines);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				declareVariable();
				setState(53);
				lines();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				include();
				setState(56);
				lines();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				forloop();
				setState(59);
				lines();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				assignment();
				setState(62);
				lines();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				funcDeclare();
				setState(65);
				lines();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				funcDefinition();
				setState(68);
				lines();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(70);
				funcCall();
				setState(71);
				lines();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(73);
				ignoreComments();
				setState(74);
				lines();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(76);
				whileloop();
				setState(77);
				lines();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(79);
				ifstatement();
				setState(80);
				lines();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(82);
				arraydeclaration();
				setState(83);
				lines();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(85);
				returnStatement();
				setState(86);
				lines();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(88);
				printfStatement();
				setState(89);
				lines();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(91);
				breakStatement();
				setState(92);
				lines();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(94);
				continueStatement();
				setState(95);
				lines();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintfStatementContext extends ParserRuleContext {
		public Token PRINTF;
		public TerminalNode PRINTF() { return getToken(CParser.PRINTF, 0); }
		public TerminalNode LEFTPAR() { return getToken(CParser.LEFTPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHTPAR() { return getToken(CParser.RIGHTPAR, 0); }
		public TerminalNode SEMICOL() { return getToken(CParser.SEMICOL, 0); }
		public PrintfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printfStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterPrintfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitPrintfStatement(this);
		}
	}

	public final PrintfStatementContext printfStatement() throws RecognitionException {
		PrintfStatementContext _localctx = new PrintfStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_printfStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			((PrintfStatementContext)_localctx).PRINTF = match(PRINTF);
			setState(101);
			match(LEFTPAR);
			setState(102);
			expression();
			setState(103);
			match(RIGHTPAR);
			setState(104);
			match(SEMICOL);
			 globalList.add("Called "+ ((PrintfStatementContext)_localctx).PRINTF.getText());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IgnoreCommentsContext extends ParserRuleContext {
		public TerminalNode COMM() { return getToken(CParser.COMM, 0); }
		public IgnoreCommentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ignoreComments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterIgnoreComments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitIgnoreComments(this);
		}
	}

	public final IgnoreCommentsContext ignoreComments() throws RecognitionException {
		IgnoreCommentsContext _localctx = new IgnoreCommentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ignoreComments);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(COMM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(CParser.RETURN, 0); }
		public TerminalNode SEMICOL() { return getToken(CParser.SEMICOL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitReturnStatement(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(RETURN);
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(110);
				expression();
				}
				break;
			case 2:
				{
				setState(111);
				funcCall();
				}
				break;
			}
			setState(114);
			match(SEMICOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareVariableContext extends ParserRuleContext {
		public AlltypesContext alltypes() {
			return getRuleContext(AlltypesContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOL() { return getToken(CParser.SEMICOL, 0); }
		public TerminalNode ASTERIK() { return getToken(CParser.ASTERIK, 0); }
		public DeclareVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDeclareVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDeclareVariable(this);
		}
	}

	public final DeclareVariableContext declareVariable() throws RecognitionException {
		DeclareVariableContext _localctx = new DeclareVariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declareVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			alltypes();
			setState(118);
			_la = _input.LA(1);
			if (_la==ASTERIK) {
				{
				setState(117);
				match(ASTERIK);
				}
			}

			setState(120);
			match(IDENTIFIER);
			setState(121);
			match(SEMICOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BreakStatementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(CParser.BREAK, 0); }
		public TerminalNode SEMICOL() { return getToken(CParser.SEMICOL, 0); }
		public BreakStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterBreakStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitBreakStatement(this);
		}
	}

	public final BreakStatementContext breakStatement() throws RecognitionException {
		BreakStatementContext _localctx = new BreakStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_breakStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(BREAK);
			setState(124);
			match(SEMICOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinueStatementContext extends ParserRuleContext {
		public TerminalNode CONTINUE() { return getToken(CParser.CONTINUE, 0); }
		public TerminalNode SEMICOL() { return getToken(CParser.SEMICOL, 0); }
		public ContinueStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continueStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterContinueStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitContinueStatement(this);
		}
	}

	public final ContinueStatementContext continueStatement() throws RecognitionException {
		ContinueStatementContext _localctx = new ContinueStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_continueStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(CONTINUE);
			setState(127);
			match(SEMICOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(CParser.INCLUDE, 0); }
		public TerminalNode LT() { return getToken(CParser.LT, 0); }
		public TerminalNode GT() { return getToken(CParser.GT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(CParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CParser.IDENTIFIER, i);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_include);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(INCLUDE);
			setState(130);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==LT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(131);
				match(IDENTIFIER);
				}
				break;
			case 2:
				{
				{
				setState(132);
				match(IDENTIFIER);
				setState(133);
				matchWildcard();
				setState(134);
				match(IDENTIFIER);
				}
				}
				break;
			}
			setState(137);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==GT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
